--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "expo": "~40.0.0",
@@ -25,12 +26,16 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
+    "react-avatar": "^3.10.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-screens": "^2.15.2",
+    "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
